[project]
name = "twitter_login"
version = "0.1.0.dev13"
description = "dev"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "chompjs>=1.4.1",
    "curl-cffi>=0.15.0",
    "lxml>=6.1.1",
]

[project.optional-dependencies]
all = [
    "av>=17.0.1",
    "filetype>=1.2.0",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "colorlog>=6.10.1",
    "playwright>=1.60.0",
    "quart>=0.20.0",
    "ruff>=0.15.18",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-better-theme>=0.1.5",
    "sphinx-rtd-theme>=3.1.0",
    "tqdm>=4.68.1",
    "uvicorn>=0.49.0",
]

[tool.setuptools.packages.find]
include = ["twitter_login*"]

[tool.ruff]
lint.select = ["TCH"]
lint.fixable = ["TCH"]
src = ["twitter_login"]

[tool.ruff.lint.flake8-type-checking]
strict = true
